added userManager.policy, updated readme